# IFT3205-TP1

./: CMakeLists.txt
ProgTpIFT3205_TransfFourier/: Tp1_IFT3205_1-1.c  Tp1_IFT3205_1-2.c  Tp1_IFT3205_1-3.c  Tp1_IFT3205_1-4.c  Tp1_IFT3205_2-1a.c  Tp1_IFT3205_2-1b.c  Tp1_IFT3205_2-1c.c  Tp1_IFT3205_2-1d.c  Tp1_IFT3205_2-1e.c  Tp1_IFT3205_2-2.c  Tp1_IFT3205_3-2a.c  Tp1_IFT3205_3-2b.c  image-Tp1_IFT3205-1-1.pgm  image-Tp1_IFT3205-1-2.pgm  image-Tp1_IFT3205-1-3.pgm  image-Tp1_IFT3205-1-4a.pgm  image-Tp1_IFT3205-1-4b.pgm  image-Tp1_IFT3205-1-4c.pgm  image-TpIFT3205-2-1a.pgm  image-TpIFT3205-2-1b.pgm  image-TpIFT3205-2-1c.pgm  image-TpIFT3205-2-1d.pgm  image-TpIFT3205-2-1e.pgm  image-TpIFT3205-2-2.pgm  image-TpIFT3205-3-2a.pgm  image-TpIFT3205-3-2b.pgm
